# ray-vox

./: .gitignore  Cargo.toml  README.md
benches/: apply.rs  bench_sphere.rs  bench_stamps.rs  bench_terrain.rs  chunk_rebuild.rs
examples/: measure_sphere.rs  vox_to_rvox.rs
src/: chunk.rs  generate.rs  lib.rs  main.rs  render.rs  shape.rs  util.rs  volumes.rs  world.rs
src/benches/: bench.rs
src/chunk/: build.rs  compact.rs  edit.rs  material.rs  merge.rs  node.rs  rebuild.rs  sources.rs  stats.rs  tests.rs
src/generate/: import.rs  model.rs  terrain.rs  volume.rs
src/generate/model/: builder.rs  coarsen.rs  import.rs  rvox.rs  stamp.rs  tests.rs
src/generate/volume/: rect.rs  sphere.rs  terrain.rs
src/import/: mod.rs  vox.rs
src/render/: camera.rs  gpu_world.rs  pipeline.rs  serialize.rs
src/shaders/: chunk.wgsl  render.wgsl
src/shape/: rect.rs  sphere.rs
src/tree/: edit.rs  stats.rs
src/tree/edit/: apply.rs
src/types/: voxel.rs
src/util/: lut.rs  packed.rs  paletted.rs  types.rs
src/volumes/: rect.rs  sphere.rs
src/world/: chunk_pool.rs  clipmap.rs  edits.rs  generate.rs  pbr.rs  pool.rs  rvox.rs  tests.rs
