[package]
name = "ray-vox"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25.10"
profiling = "1.0.17"
rand = { version = "0.8", features = ["small_rng"] }
radsort = "0.1"
rayon = "1"
wgpu = "23"
winit = "0.30"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
rdxsort = "0.3.0"

[profile.release]
opt-level = 3
lto = "thin"
