[package]
name = "ray-vox"
version = "0.1.0"
edition = "2024"
default-run = "ray-vox"

[lib]
path = "src/lib.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
dot_vox = "5"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25.10"
profiling = "1.0.17"
rand = { version = "0.8", features = ["small_rng"] }
radsort = "0.1"
rayon = "1"
env_logger = "0.11"
log = "0.4"
wgpu = "23"
winit = "0.30"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

[[bench]]
name = "bench_sphere"
harness = false

[profile.release]
opt-level = 3
lto = "thin"

# Profiling-friendly release build. Use with cargo flamegraph.
[profile.profiling]
inherits = "release"
debug = true
